レイアウト調整

--- a/course.html
+++ b/course.html
@@ -40,7 +40,7 @@
                     </ol>
                 </div>
 
-                <article>
+                <article id="course">
                     <h1>h1講座案内</h1>
                     <p class="lead">リード文がはいります。リード文がはいります。リード文がはいります。リード文がはいります。</p>
                     <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
@@ -53,15 +53,15 @@
                               <table>
                                 <tr>
                                   <th>定員</th>
-                                  <th>10名</th>
+                                  <td>10名</td>
                                 </tr>
                                 <tr>
                                   <th>価格</th>
-                                  <th>一人2000円/ペア参加でひとり1500円</th>
+                                  <td>一人2000円/ペア参加でひとり1500円</td>
                                 </tr>
                                 <tr>
                                   <th>持ち物</th>
-                                  <th>道具はすべて用意します。</th>
+                                  <td>道具はすべて用意します。</td>
                                 </tr>
                               </table>
                         </section>
