--- a/gallery.html
+++ b/gallery.html
@@ -52,6 +52,10 @@
                             見本作品 Ｂさん</li>
                             <li><img src="images/item03.jpg" alt="作品3"><br>
                             見本作品 Ｃさん</li>
+                            <li><img src="images/item04.jpg" alt="作品4"><br>
+                            見本作品 Ｄさん</li>
+                            <li><img src="images/item05.jpg" alt="作品5"><br>
+                            見本作品 Ｅさん</li>
                         </ul>
                     </section>
                 </article>
