--- a/access.html
+++ b/access.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>アクセス｜フラワーアレンジメント教室 Bloom</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/style.css" </head>
 
     <body>
@@ -40,13 +41,18 @@
                 </div>
 
                 <article>
-                    <h1>h1講座案内</h1>
-                    <p class="lead">リード文がはいります。リード文がはいります。リード文がはいります。リード文がはいります。</p>
-                    <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                    <h1>アクセス</h1>
                     <section>
-                        <h2>h2見出しが入ります。</h2>
+                      <h2>Bloomへのアクセス</h2>
+                      <section>
+                        <h3>住所</h3>
+                        <p>〒000-0000<br>
+                        ○○県○○市○○町1-2-3 フラワーアレンジメント教室ブルーム </p>
+                      </section>
                         <section>
-                            <h3>h3見出しが入ります。</h3>
+                            <h3>地図</h3>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.825520274425!2d139.76405285084854!3d35.68129798009719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bfbd89f700b%3A0x277c49ba34ed38!2z5p2x5Lqs6aeF!5e0!3m2!1sja!2sjp!4v1476870639085" width="730" height="500" frameborder="0" style="border:0" allowfullscreen>
+                            </iframe>
                         </section>
                     </section>
                 </article>
