--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ギャラリー｜フラワーアレンジメント教室 Bloom</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/style.css" </head>
 
     <body>
